Team-A/cluster_config/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-eu-namespace
spec:
  finalizers:
    - foregroundDeletion
